# Spectral_Analyser

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CHANGES.md  CHANGES_PHASE_7.md  CITATION.cff  CODE_FORMULA_TRACEABILITY_TABLE.md  CURATED_EXPORT_TEST_FIX_REPORT.md  CURRENT_DOCUMENTATION_INDEX.md  DENSITY_EXPORT_SCHEMA.md  GITHUB_EXPORT_MANIFEST.md  LICENSE  LOCAL_REPAIR_TRANSFER_MANIFEST_20260523.md  NOTICE.md  ORCHESTRATOR_INTEGRATION_GUIDE.md  QUICK_START_ORCHESTRATOR.md  README.md  REFERENCES.md  RELEASE_NOTES_v51.md  SECURITY.md  TECHNICAL_MANUAL.md  TESTING.md  TROUBLESHOOTING_ORCHESTRATOR.md  __init__.py  acoustic_data_analysis_suite.py  acoustic_density_core.py  adaptive_density_engine.py  analysis_policy.py  audio_utils.py  compile_metrics.py  constants.py  data_integrity.py  debug_counts.py  density.py  density_uncertainty.py  dissonance_export.py  dissonance_models.py  energy_accounting.py  export_paths.py  export_row_identity.py  (+42 more)
.circleci/: config.yml
.github/workflows/: ci.yml
Backup/: README.md
Backup/root_modules/: export_paths.py  interface.py  public_audio_identifiers.py  reference_signal_utils.py  runtime_versions.py
Backup/scripts/: harmonic_count_audit.py
audio_analysis/: BATCH_CONFIG_README.md  BATCH_PROCESSING_README.md  README_SUPER_ANALYZER.md  batch_audio_analyzer.py  batch_config.json  batch_example.py  super_audio_analyzer.py  super_audio_analyzer_gui.py
audio_analysis/config/: 90_tier_config.json
data/: hk1978_g_table.csv  hk1978_g_table_legacy.csv  hk1978_g_table_provenance.txt  hk1978_g_table_wpd_project.tar
docs/: BATCH_ANALYSIS_AUDIT.md  BATCH_ANALYSIS_FIELD_MAP.md  CANONICAL_PIPELINE_AND_EXPORT_SEMANTICS.md  COMPUTATIONAL_METRICS_CODE_REVIEW_REPORT.md  CONSTANTS_PROVENANCE.md  CURRENT_DOCUMENTATION_INDEX.md  DENSITY_EXPORT_SCHEMA.md  DOCUMENTATION_AUDIT_REPORT.md  EXPORT_COLUMN_DICTIONARY.md  GUI_OPTION_REFERENCE.md  MANUAL_COVERAGE_REPORT.md  MATHEMATICAL_FORMALISATION_VERIFICATION_REPORT_FIRST_PASS.md  METRIC_FORMULA_INDEX.md  POST_MERGE_PUBLIC_REPOSITORY_AUDIT.md  TECHNICAL_MANUAL_COMPLETE.md  parameter_provenance.md
docs/formula_extraction/: FORMULA_EXTRACTION_EXHAUSTIVENESS_AUDIT.md  FORMULA_EXTRACTION_INDEX.md  FORMULA_EXTRACTION_TABLE_DENSITY_FIRST_PASS.md  FORMULA_EXTRACTION_TABLE_PASS_02_WEIGHT_FUNCTIONS.md  FORMULA_EXTRACTION_TABLE_PASS_03_PARTIAL_SUMS_AND_BUNDLES.md  FORMULA_EXTRACTION_TABLE_PASS_04_RESIDUAL_AND_INHARMONIC_CLASSIFICATION.md  FORMULA_EXTRACTION_TABLE_PASS_05_HARMONIC_ALIGNMENT.md  FORMULA_EXTRACTION_TABLE_PASS_06_PEAK_COMPONENT_COUNTS.md  FORMULA_EXTRACTION_TABLE_PASS_07_LOW_FREQUENCY_POLICY.md  FORMULA_EXTRACTION_TABLE_PASS_08_SPECTRAL_LEAKAGE_GUARDS.md  FORMULA_EXTRACTION_TABLE_PASS_09_COMPILE_TIME_NORMALISATION.md  FORMULA_EXTRACTION_TABLE_PASS_10_PROC_AUDIO_SELECTED_FORMULAS.md  FORMULA_EXTRACTION_TABLE_PASS_11_DENSITY_EXTENDED_METRICS.md  FORMULA_EXTRACTION_TABLE_PASS_12_DISSONANCE_MODELS.md  FORMULA_EXTRACTION_TABLE_PASS_13_PEAK_DETECTION_AND_F0_REFINEMENT.md  FORMULA_EXTRACTION_TABLE_PASS_14_COMPILE_EXTRACTION_AND_BATCH_MASS.md  FORMULA_EXTRACTION_TABLE_PASS_15_DATA_INTEGRITY_NORMALISATION.md  FORMULA_VALIDATION_PLAN.md
docs/formula_validation/: FORMULA_VALIDATION_PLAN_INDEX.md  FORMULA_VALIDATION_PLAN_PASS_01_DENSITY_METRICS.md  FORMULA_VALIDATION_PLAN_PASS_02_WEIGHT_FUNCTIONS.md  FORMULA_VALIDATION_PLAN_PASS_03_PARTIAL_SUMS_AND_BUNDLES.md  FORMULA_VALIDATION_PLAN_PASS_04_RESIDUAL_AND_INHARMONIC_CLASSIFICATION.md  FORMULA_VALIDATION_PLAN_PASS_05_HARMONIC_ALIGNMENT.md  FORMULA_VALIDATION_PLAN_PASS_06_PEAK_COMPONENT_COUNTS.md  FORMULA_VALIDATION_PLAN_PASS_07_LOW_FREQUENCY_POLICY.md  FORMULA_VALIDATION_PLAN_PASS_08_SPECTRAL_LEAKAGE_GUARDS.md  FORMULA_VALIDATION_PLAN_PASS_09_COMPILE_TIME_NORMALISATION.md  FORMULA_VALIDATION_PLAN_PASS_10_PROC_AUDIO_SELECTED_FORMULAS.md  FORMULA_VALIDATION_PLAN_PASS_11_DENSITY_EXTENDED_METRICS.md  FORMULA_VALIDATION_PLAN_PASS_12_DISSONANCE_MODELS.md  FORMULA_VALIDATION_PLAN_PASS_13_PEAK_DETECTION_AND_F0_REFINEMENT.md  FORMULA_VALIDATION_PLAN_PASS_14_COMPILE_EXTRACTION_AND_BATCH_MASS.md  FORMULA_VALIDATION_PLAN_PASS_15_DATA_INTEGRITY_NORMALISATION.md
docs/validation/: EWSD_THEORY.md  (+9 more)
instalers/: README.md
installers/: README.md
scripts/: README_SENSITIVITY.md  build_publication_html_package.py  check_publication_paths.py  fix_mojibake_literals.py  scan_mojibake.py  sensitivity_analysis.py  validate_density_workbook.py  validate_stft_reference.py
tests/: __init__.py  pipeline_workbook_audit.py  test_batch_metadata_denominator.py  test_batch_orchestrator_handoff.py  test_batch_summary_export.py  test_benchmarks.py  test_canonical_density_v5_and_global_norm.py  test_canonical_pipeline_contract.py  test_compile_export_density_pca.py  test_compile_skip_office_lock_files.py  test_component_balance_pies.py  test_debug_counts_invariants.py  test_density_export_hardening.py  test_density_metric_correction.py  test_density_metric_weighted_formula.py  test_density_metrics_component_basis.py  test_density_metrics_per_note_extraction.py  test_density_phase3.py  test_density_semantics_v6.py  test_discrete_spectral_metrics.py  test_dissonance_excel_export.py  test_dissonance_vectorisation_equivalence.py  test_drop_dead_columns.py  test_edge_cases.py  test_edge_frame_correction.py  test_effective_partial_density.py  test_export_compliance_v6.py  test_export_paths.py  test_external_validation_marketing_ban.py  test_f0_provenance.py  test_f0_state_finalization.py  test_final_pipeline_invariants.py  test_forbidden_legacy_tokens.py  test_gui_export_publication_policy.py  test_gui_model_weight_policy.py  test_harmonic_alignment_metrics.py  test_harmonic_alignment_reporting.py  test_harmonic_effective_power_density.py  test_harmonic_effective_power_mass.py  test_harmonic_gate_and_f0_fit_relaxation.py  (+44 more)
tools/: __init__.py  audit_compiled_workbook.py  ewsd_core.py  ewsd_pure.py  ewsd_research_integration.py  ewsd_sensitivity_report.py  ewsd_stage3_contract.py  ewsd_uncertainty.py  export_research_density_workbook.py  generate_parameter_provenance.py  note_density_nfft_sensitivity.py
(+188 files in other folders)
