[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-analyser"
version = "4.0.3"
description = "Spectral_Analyser — advanced spectral analysis for acoustic research with harmonic-order-aware processing"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "Proprietary - All Rights Reserved"}
authors = [
    {name = "Research Team", email = "research@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "librosa>=0.9.0,<1.0.0",
    "soundfile>=0.10.0,<1.0.0",
    "numba>=0.56.0,<0.60.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "umap-learn>=0.5.0,<1.0.0",
    "PyQt5>=5.15.0,<6.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "plotly>=5.0.0,<6.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "xlsxwriter>=3.0.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "python-dotenv>=0.19.0,<1.0.0",
    "pydub>=0.25.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "psutil>=5.9.0,<6.0.0",
    "pytest-cov>=3.0.0,<4.0.0",
    "coverage>=6.0.0,<8.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
# Canonical CLI: full batch → empirical H–I–S → per-note → compiled pipeline (same as python run_orchestrator.py). Windows run.bat is separate: pipeline_orchestrator_gui.py (Tk).
spectral-analyser = "run_orchestrator:main"
# Former PyQt entry; main.py now forwards to pipeline_orchestrator_integrated.py --gui (Tk).
spectral-analyser-legacy-gui = "main:main"

[tool.setuptools]
# Flat layout: top-level modules (no src/ package); avoids invalid `packages = ["."]`
py-modules = [
    "acoustic_data_analysis_suite",
    "acoustic_density_core",
    "adaptive_density_engine",
    "analysis_policy",
    "audio_utils",
    "compile_metrics",
    "constants",
    "data_integrity",
    "debug_counts",
    "density",
    "density_uncertainty",
    "dissonance_export",
    "dissonance_models",
    "energy_accounting",
    "export_row_identity",
    "gui_compile_stage2_worker",
    "gui_model_weight_policy",
    "harmonic_alignment",
    "harmonic_peak_validation",
    "harmonic_validation",
    "inharmonicity_model",
    "log_config",
    "low_frequency_policy",
    "main",
    "metadata_sanitizer",
    "metric_contract",
    "mir_descriptors",
    "note_parser",
    "peak_component_counts",
    "pipeline_contract",
    "pipeline_orchestrator_gui",
    "pipeline_orchestrator_integrated",
    "post_compile_research_export",
    "proc_audio",
    "publication_chart_policy",
    "publication_metric_columns",
    "result_cache",
    "run_orchestrator",
    "run_real_corpus_validation",
    "spectral_leakage_guards",
    "spectral_normalization",
    "subbass_policy",
    "temporal_segmentation",
    "validate_canonical_metrics",
    "verify_runtime_schema",
    "weight_function_ui_labels",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Custom markers. Registering them silences the
# ``PytestUnknownMarkWarning`` and gives consumers a stable contract for
# selecting / deselecting test subsets. See ``TESTING.md`` for the full
# policy and how to run the slow tests on demand.
markers = [
    "slow: tests that are computationally expensive or unsuitable for the default fast suite",
]

# Coverage scope: production analytical modules only (not tests, GUI, orchestrators,
# one-off validation scripts, or generated artifacts). Use:
#   python -m pytest tests -q --cov --cov-report=term-missing
# Do not pass --cov=. on the CLI; that overrides this source list.
[tool.coverage.run]
source = [
    "acoustic_density_core",
    "analysis_policy",
    "compile_metrics",
    "data_integrity",
    "density",
    "density_uncertainty",
    "energy_accounting",
    "export_row_identity",
    "harmonic_alignment",
    "harmonic_peak_validation",
    "harmonic_validation",
    "inharmonicity_model",
    "low_frequency_policy",
    "metadata_sanitizer",
    "metric_contract",
    "mir_descriptors",
    "note_parser",
    "peak_component_counts",
    "pipeline_contract",
    "proc_audio",
    "spectral_normalization",
    "subbass_policy",
    "temporal_segmentation",
]
omit = [
    "tests/*",
    ".circleci/*",
    "main.py",
    "run_*.py",
    "gui_*.py",
    "pipeline_orchestrator_gui.py",
    "pipeline_orchestrator_integrated.py",
    "acoustic_data_analysis_suite.py",
    "run_real_corpus_validation.py",
    "validate_canonical_metrics.py",
    "verify_runtime_schema.py",
    "tools/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
    "**/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
